# create-vcf-basemap

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  spec.yaml  test-cases.yaml
.github/workflows/: _build.yml  ci.yml  publish.yml  tag.yml
__results_snapshots__/default/: test_dashboard_json[data].json  test_dashboard_json[nodata].json
ecoscope-workflows-create-vcf-basemap-workflow/: Dockerfile  README.md  VERSION.yaml  pixi.toml  pyproject.toml
ecoscope-workflows-create-vcf-basemap-workflow/ecoscope_workflows_create_vcf_basemap_workflow/: cli.py  params.json  rjsf.json
ecoscope-workflows-create-vcf-basemap-workflow/ecoscope_workflows_create_vcf_basemap_workflow/dags/: __init__.py  run_sequential.py  run_sequential_mock_io.py
ecoscope-workflows-create-vcf-basemap-workflow/tests/: conftest.py  test_metadata.py  test_results.py
publish/: build.sh  push.sh
publish/recipes/release/: vcf-basemap.yaml
src/vcf_basemap/: tasks.py
