[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "vcf-basemap"
dynamic = ["version"]
description = "MODIS VCF + SRTM hillshade basemap for Kenya – Ecoscope Platform SDK workflow"
requires-python = ">=3.11"
dependencies = [
    "earthengine-api>=0.1.370",
]

# Registers the tasks module so wt-registry can discover @register()-decorated
# functions by name (used in spec.yaml → task: create_vcf_basemap).
[project.entry-points."wt_registry"]
vcf_basemap = "vcf_basemap.tasks"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.wheel]
packages = ["src/vcf_basemap"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
vcf-basemap = { path = ".", editable = true }

[tool.pixi.tasks]
